--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,122 @@
-.App {
+/* .App {
   text-align: center;
+} */
+
+
+.pd-1{
+  padding-top: 1px !important;
+}
+nav{
+  z-index: 1;
+}
+nav span{
+  font-size: 20px;
+  padding: 5px;
+  padding-top: 4px;
+}
+nav span:hover{
+  color: #fff !important;
+  /* background-color: rgb(255, 174, 0); */
+  padding: 5px;
+  padding-top: 4px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.carousel{
+  /* position: relative !important; */
+  margin-top: 50px;
+  -webkit-box-shadow: 0px 9px 22px -4px rgba(0,0,0,0.68);
+-moz-box-shadow: 0px 9px 22px -4px rgba(0,0,0,0.68);
+box-shadow: 0px 9px 22px -4px rgba(0,0,0,0.68);
+}
+.carousel .carousel-inner{
+  max-height: 695px !important;
+}
+.carousel-caption {
+  margin-bottom: 900px;
+  
+}
+.card{
+  background-color: rgb(245, 240, 240);
+}
+.card img{
+  max-height: 300px;
+  min-height: 300px;
+  opacity: 0.9;
+}
+.card img:hover{
+  opacity: 1;
+}
+.detail{
+  margin: 0px 150px;
+  margin-top: 150px;
+  padding: 5px;
+    /* border: 1px solid silver; */
+    
+  background-color: rgb(236, 233, 233);
+  border-radius: 4px;
+}
+.detail img{
+  border: 4px solid rgb(236, 233, 233);
+  /* opacity: 0.2; */
+}
+.detailRight h1{
+ padding-left: 20px ;
+ padding-right: 20px;
+ padding-top: 5px;
+ padding-bottom: 0px;
+}
+.detailRight h5{
+ padding-left: 20px ;
+ padding-bottom: 0px;
+ padding-right: 20px;
+}
+.detailRight p{
+ padding: 20px;
+ text-align: justify;
+}
+.detailRight .tech h4{
+ padding-left: 20px;
+}
+.detailRight .tech input{
+ height: 38px !important;
+ border: 1.5px solid rgb(214, 170, 26);
+ border-radius: 3px;
+ width:40px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.detailRight .tech input:focus{
+outline: none !important;
+ border: 2px solid rgb(214, 170, 26);
 }
+.detailRight .tech button{
+ margin-left: 0px;
+ color: #fff;
+ font-weight: bold
+ /* margin-right:20px */
+}
+.mr-20{
+  margin-right: 20px;
+}
+.detailRight .tech input{
+ height: 35px;
+}
+.detailRight button{
+ margin-left: 20px;
+}
+.allProduct{
+  margin-top: 50px;
+}
+.product img{
+  padding: 30px;
+  transition: all .3s linear; 
+  overflow: hidden;
+}
+.product img:hover { transform: scale(1.2);
+cursor: pointer; }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.detail img{
+  transition: all .3s ease-in-out; 
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+.detail img:hover { transform: scale(1.05);
+cursor: pointer; }
