--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@ box-shadow: 0px 9px 22px -4px rgba(0,0,0,0.68);
   opacity: 1;
 }
 .detail{
-  margin: 0px 150px;
+  margin: 150px 150px;
   margin-top: 150px;
   padding: 5px;
     /* border: 1px solid silver; */
@@ -57,19 +57,20 @@ box-shadow: 0px 9px 22px -4px rgba(0,0,0,0.68);
   border-radius: 4px;
 }
 .detail img{
+  max-height: 500px;
   border: 4px solid rgb(236, 233, 233);
   /* opacity: 0.2; */
 }
-.detailRight h1{
+.detailRight h2{
  padding-left: 20px ;
  padding-right: 20px;
- padding-top: 5px;
+ padding-top: 20px;
  padding-bottom: 0px;
 }
 .detailRight h5{
- padding-left: 20px ;
  padding-bottom: 0px;
  padding-right: 20px;
+ padding-top: 10px;
 }
 .detailRight p{
  padding: 20px;
@@ -77,32 +78,33 @@ box-shadow: 0px 9px 22px -4px rgba(0,0,0,0.68);
 }
 .detailRight .tech h4{
  padding-left: 20px;
+ padding-top: 10px;
 }
-.detailRight .tech input{
- height: 38px !important;
+.detailRight .qnty{
+  padding-left: 20px;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+}
+.detailRight .qnty span{
+ height: 50px;
+ width: 50px;
+ text-align: center;
+ padding-top: 8px;
+ font-size: 20px;
  border: 1.5px solid rgb(214, 170, 26);
- border-radius: 3px;
- width:40px;
+ /* border-radius: 3px; */
 }
 
-.detailRight .tech input:focus{
-outline: none !important;
+.detailRight .qnty span:hover{
  border: 2px solid rgb(214, 170, 26);
-}
-.detailRight .tech button{
- margin-left: 0px;
- color: #fff;
- font-weight: bold
- /* margin-right:20px */
+ cursor: pointer ;
 }
 .mr-20{
   margin-right: 20px;
 }
-.detailRight .tech input{
- height: 35px;
-}
-.detailRight button{
- margin-left: 20px;
+.ml-20{
+  margin-left: 20px;
 }
 .allProduct{
   margin-top: 50px;
